--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "alinex-config": "0.3.x",
+    "alinex-once": "0.0.1",
     "async": "^0.9.0",
     "chalk": "0.5.x",
     "debug": "2.x",
