--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
     "lib": "./lib"
   },
   "dependencies": {
+    "alinex-async": "^0.1.2",
     "alinex-config": "0.4.x",
-    "alinex-once": "0.1.x",
-    "async": "^0.9.0",
     "chalk": "1.x",
     "debug": "2.x",
     "mysql": "2.x"
