Add database creation to travis script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ node_js:
    - "0.11"
    - "0.12"
    - "io.js"
+before_script:
+  - mysql -e "CREATE DATABASE test;"
+  - mysql -e "CREATE USER test@localhost IDENTIFIED BY '';"
+  - mysql -e "GRANT ALL PRIVILEGES ON test.* TO 'test'@'localhost' WITH GRANT OPTION;"
