--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ node_js:
    - "0.12"
    - "io.js"
 before_script:
-  - mysql -e "CREATE DATABASE test;"
-  - mysql -e "CREATE USER test@localhost IDENTIFIED BY '';"
-  - mysql -e "GRANT ALL PRIVILEGES ON test.* TO 'test'@'localhost' WITH GRANT OPTION;"
+  - mysql -uroot -e "DELETE FROM mysql.db WHERE Db = 'test\\_%';"
+  - mysql -uroot -e "DELETE FROM mysql.user WHERE Host = 'localhost' AND User = '';"
+  - mysql -uroot -e "FLUSH PRIVILEGES;"
+  - mysql -uroot -e "CREATE DATABASE IF NOT EXISTS test_mysql DEFAULT CHARACTER SET utf8 COLLATE utf8_unicode_ci;"
+  - mysql -uroot -e "GRANT ALL PRIVILEGES ON test_mysql.* TO 'test_user'@'localhost' IDENTIFIED BY '1234';"
+# # Some extras for Travis-CI only
+  - mysql -uroot -e "DELETE FROM mysql.user WHERE User = 'travis';"
+  - mysql -uroot -e "FLUSH PRIVILEGES;"
