--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ node_js:
    - "0.12"
    - "io.js"
 before_script:
-  - mysql -e "CREATE DATABASE test;"
-  - mysql -e "CREATE USER test@localhost IDENTIFIED BY '';"
-  - mysql -e "GRANT ALL PRIVILEGES ON test.* TO 'test'@'localhost' WITH GRANT OPTION;"
+  - "mysql -e 'create database test_mysql;'"
+env:
+  - MYSQL_HOST=localhost MYSQL_DATABASE=test_mysql MYSQL_USER=root MYSQL_PASSWORD=
+mysql:
+  adapter: mysql2
+  username: root
+  encoding: utf8
+  database: test_mysql
