--- a/test/data/mysql.yml
+++ b/test/data/mysql.yml
@@ -6,8 +6,8 @@
 test:
   host: localhost
   #port: 3306
-  database: test
-  user: test
+  database: test_mysql
+  user: root
   #password:
   #charset: UTF8_GENERAL_CI
   #timezone: local
