Use environment variable in test config.

--- a/test/data/mysql.yml
+++ b/test/data/mysql.yml
@@ -6,8 +6,8 @@
 test:
   host: localhost
   #port: 3306
-  database: test_mysql
-  user: root
+  #database: test
+  #user: test
   #password:
   #charset: UTF8_GENERAL_CI
   #timezone: local
